# USGEngine

./: CMakeLists.txt
docs/ECS_Engine_Notes/: CMake.md  Libraries.md  Memory Management.md  Overview.md  Resources.md
docs/ECS_Engine_Notes/.obsidian/: workspace.json
docs/ECS_Engine_Notes/Components/: Component.md
docs/ECS_Engine_Notes/Engine/: GfxEngine.md  Scenes.md
docs/ECS_Engine_Notes/Entities/: Entity.md  IDSystem.md
include/glad/: glad.h
src/: Clock.cpp  Clock.h  glad.c  main.cpp
src/Common/: Common.h
src/Engine/: Engine.cpp  Engine.h  Scene.cpp  Scene.h
src/Engine/Components/: Transform.cpp  Transform.h
src/Engine/Components/BaseComponent/: Component.h  IComponent.h
src/Engine/Components/ComponentPool/: ComponentPool.h  ComponentPoolManager.h  IComponentPool.h
src/Engine/Entity/: Entity.cpp  Entity.h
src/Engine/Input/: InputManager.cpp  InputManager.h  InputMap.h
src/Graphics/: GfxEngine.cpp  GfxEngine.h
src/ID/: IDGen.cpp  IDGen.h
src/Memory/: IAllocator.h  PoolAlloc.cpp  PoolAlloc.h
src/Stub/: Stub.cpp  Stub.h
